Fix wrapping on response list

--- a/results.css
+++ b/results.css
@@ -37,8 +37,13 @@ body {
     padding: 0px 30px 0px 30px;
     box-shadow: 6px 6px black;
     margin: 20px;
-    width: 60%;
+    width: 40%;
 }
+
+.resp {
+    display: inline-block;
+    white-space: nowrap;
+  }
 
 .container #form td {
     text-align: left;
